crates/edm-core/tests/snapshots/batch__fill.snap
---
source: crates/edm-core/tests/batch.rs
expression: run.trace
---
[
    Trade(
        TradePlan {
            market_id: "3223343616",
            kind: Buy,
            commodity_id: 101.0,
            commodity_name: "Gold",
            black_market: false,
            stolen: false,
            unit_price: 100.0,
            qty: 5.0,
            final_qty: 5.0,
        },
    ),
    Progress(
        "[1] buy 5 x Gold @ 100 = 500 cr  HTTP 200  cargo 5/20  credits 1,000,000",
    ),
    Trade(
        TradePlan {
            market_id: "3223343616",
            kind: Buy,
            commodity_id: 102.0,
            commodity_name: "Silver",
            black_market: false,
            stolen: false,
            unit_price: 30.0,
            qty: 15.0,
            final_qty: 15.0,
        },
    ),
    Progress(
        "[1] buy 15 x Silver @ 30 = 450 cr  HTTP 200  cargo 20/20  credits 1,000,000",
    ),
    Done(
        Outcome {
            reason: "hold is full",
            rounds: 1,
        },
    ),
]
