crates/edm-core/tests/snapshots/batch__three_failures.snap
---
source: crates/edm-core/tests/batch.rs
expression: run.trace
---
[
    Trade(
        TradePlan {
            market_id: "3223343616",
            kind: Buy,
            commodity_id: 101.0,
            commodity_name: "Gold",
            black_market: false,
            stolen: false,
            unit_price: 100.0,
            qty: 50.0,
            final_qty: 50.0,
        },
    ),
    Progress(
        "[1] buy 50 x Gold @ 100 = 5,000 cr  HTTP 502  cargo 0/200",
    ),
    Progress(
        "[1] retrying after a failed request",
    ),
    Sleep {
        millis: 1000.0,
    },
    Refresh,
    Trade(
        TradePlan {
            market_id: "3223343616",
            kind: Buy,
            commodity_id: 101.0,
            commodity_name: "Gold",
            black_market: false,
            stolen: false,
            unit_price: 100.0,
            qty: 50.0,
            final_qty: 50.0,
        },
    ),
    Progress(
        "[2] buy 50 x Gold @ 100 = 5,000 cr  HTTP 502  cargo 0/200",
    ),
    Progress(
        "[2] retrying after a failed request",
    ),
    Sleep {
        millis: 1000.0,
    },
    Refresh,
    Trade(
        TradePlan {
            market_id: "3223343616",
            kind: Buy,
            commodity_id: 101.0,
            commodity_name: "Gold",
            black_market: false,
            stolen: false,
            unit_price: 100.0,
            qty: 50.0,
            final_qty: 50.0,
        },
    ),
    Progress(
        "[3] buy 50 x Gold @ 100 = 5,000 cr  HTTP 502  cargo 0/200",
    ),
    Done(
        Outcome {
            reason: "a trade request failed 3 times in a row",
            rounds: 3,
        },
    ),
]
