crates/edm-core/tests/snapshots/batch__trades_rows.snap
---
source: crates/edm-core/tests/batch.rs
expression: rows
---
[
    Data(
        [
            "1",
            "Gold",
            "5",
            "100",
            "500",
            "200",
            "0",
        ],
    ),
    Data(
        [
            "1",
            "Silver",
            "10",
            "30",
            "300",
            "200",
            "0",
        ],
    ),
    Rule,
    Data(
        [
            "",
            "TOTAL",
            "15",
            "",
            "800",
            "",
            "15",
        ],
    ),
]
